# gemini-web-navigator

./: .gitignore  LICENSE  README.md  gemini_navigator.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/: fastpeoplesearch.yaml  google_search.yaml  securitytrails.yaml
gemini_navigator/: .gitignore  Dockerfile  gemini_navigator.py  pyproject.toml  requirements.txt  utils.py
gemini_navigator/experiments/: omniparser_test.py  parsed_data.json
ocr/: Dockerfile  README.md  pyproject.toml
ocr/ocr/: server.py
omniparser/: .gitignore  CHANGES  Dockerfile  README.md  pyproject.toml
omniparser/omniparser/: omniparser.py  server.py  utils.py
